--- a/fi/LC_MESSAGES/gamestats.po
+++ b/fi/LC_MESSAGES/gamestats.po
@@ -1,13 +1,13 @@
 # Finnish translations for GameStats.
-# Copyright (C) 2017 GameStats
+# Copyright (C) 2018 GameStats
 # This file is distributed under the same license as the GameStats project.
-# https://github.com/Avaren, 2017.
+# AsdewQ#0552, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.1\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2017-12-16 01:07+0000\n"
+"POT-Creation-Date: 2018-04-01 14:09+0100\n"
 "PO-Revision-Date: 2017-08-17 02:54+0300\n"
 "Last-Translator: AsdewQ#0552\n"
 "Language: fi\n"
@@ -16,10 +16,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.1\n"
+"Generated-By: Babel 2.5.3\n"
 
-msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
-msgstr "**VIRHE**: Tämä botti tarvitsee oikeuden lähettää upotuksia (embedejä), varmistathan että  tällä botilla on oikeus 'Embed Links'"
+msgid "*Warning*: Different spelling of {user}"
+msgstr ""
 
 msgid "<:nms:346638509114785808>No Man's Sky Universe Map for {guild}"
 msgstr ""
@@ -57,6 +57,9 @@ msgstr "Kielet ladattu"
 msgid "Location"
 msgstr ""
 
+msgid "Looking up {game} account for {user} on {platform}."
+msgstr ""
+
 msgid "Looking up {user} on {game} on {platform}..."
 msgstr "Tarkistetaan {user} pelissä {game} {platform}:ssä..."
 
@@ -91,6 +94,18 @@ msgstr ""
 "Profiili luotu. Lisää käyttäjiä ajamalla komento {prefix}add <käyttäjä>\n"
 "Tuetut käyttäjät: {accounts}"
 
+msgid "Request accepted"
+msgstr ""
+
+msgid "Request accepted. Adding to {name}"
+msgstr ""
+
+msgid "Request declined"
+msgstr ""
+
+msgid "Requesting permission from {name}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr "Aseta kieli {language} palvelimelle {guild_name}"
 
@@ -99,6 +114,11 @@ msgstr "Näytä tilastosi pelistä {game}"
 
 msgid "Sorry that account isn't on your profile."
 msgstr "Tuota käyttäjää ei ole profiilissasi"
+
+msgid ""
+"Sorry the account {account} is not supported yet.\n"
+"The supported accounts are {accounts}"
+msgstr ""
 
 msgid ""
 "Sorry the account {account} is not supported yet.\n"
@@ -127,10 +147,22 @@ msgstr "Tuo käyttäjä ei ole lisännyt käyttäjää pelille {game}"
 msgid "That was not a valid choice. You have {tries} more tries."
 msgstr "Tuo ei ole vaihtoehto. Sinulla on {tries} yritystä jäljellä."
 
+msgid "That wasn't a valid answer, please answer yes or no."
+msgstr ""
+
 msgid "That's not a valid platform, the options are: {platforms}"
 msgstr "Tuo ei ole tuettu alusta, vaihtoehdot ovat: {platforms}"
 
+msgid "The account names don't match and may not work, try checking capitalisation. {user} vs. {account}"
+msgstr ""
+
+msgid "The available platforms are {platforms}"
+msgstr ""
+
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
+msgstr ""
+
+msgid "The user {user} does not have a {game} profile on {platform}."
 msgstr ""
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
@@ -165,9 +197,6 @@ msgstr "Sinulla ei ole käyttäjiä profiilissasi, lisää muutama!"
 msgid "You have already registered {account}"
 msgstr "Sinä olet jo rekisteröinyt käyttäjän {account}"
 
-msgid "You have not yet set up a profile, do {prefix}profile to get started."
-msgstr "Sinulla ei vielä ole profiilia, aja komento {prefix}profile aloittaaksesi."
-
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr "Sinun pitää listätä käyttäjä peliin {game}, aja komento {prefix}add {game_key}"
 
@@ -189,18 +218,27 @@ msgstr ""
 msgid "{guild} unregistered from receiving live match updates."
 msgstr ""
 
+msgid "{language_key} added to list of available languages, which are: [{languages}]"
+msgstr "{language} lisätty saatavilla oleviin kieliin, jotka ovat: [{languages}]"
+
 msgid "{language_key} removed from available languages, which are: [{languages}]"
 msgstr "{language_key} poistettu saatavilla olevista kielistä, jotka ovat: [{languages}]"
 
-msgid "{language} added to list of available languages, which are: [{languages}]"
-msgstr "{language} lisätty saatavilla oleviin kieliin, jotka ovat: [{languages}]"
-
 msgid "{language} not in list of available languages: {languages}"
 msgstr "{language} ei ole saatavilla olevissa kielissä: {languages}"
+
+msgid "{name} declined"
+msgstr ""
 
 msgid "{user}'s Home Base"
 msgstr ""
 
 #~ msgid "Please enter your account name for {game}:"
 #~ msgstr "Kerro sinun pelinimesi pelissä {game}:"
+
+#~ msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
+#~ msgstr "**VIRHE**: Tämä botti tarvitsee oikeuden lähettää upotuksia (embedejä), varmistathan että  tällä botilla on oikeus 'Embed Links'"
+
+#~ msgid "You have not yet set up a profile, do {prefix}profile to get started."
+#~ msgstr "Sinulla ei vielä ole profiilia, aja komento {prefix}profile aloittaaksesi."
 
