--- a/fr/LC_MESSAGES/gamestats.po
+++ b/fr/LC_MESSAGES/gamestats.po
@@ -1,13 +1,13 @@
 # French translations for GameStats.
-# Copyright (C) 2017 GameStats
+# Copyright (C) 2018 GameStats
 # This file is distributed under the same license as the GameStats project.
-# https://github.com/Avaren, 2017.
+# ☭ Joseph Staline ☭#4200, 2017
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.1\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2017-12-16 01:07+0000\n"
+"POT-Creation-Date: 2018-04-01 14:09+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: ☭ Joseph Staline ☭#4200\n"
 "Language: fr\n"
@@ -16,10 +16,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.1\n"
+"Generated-By: Babel 2.5.3\n"
 
-msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
-msgstr "**ERROR**: Le bot requiert l'abilité d'intégrer des liens, sois sûr qu'il a la permission: 'Intégrer des Liens'."
+msgid "*Warning*: Different spelling of {user}"
+msgstr ""
 
 msgid "<:nms:346638509114785808>No Man's Sky Universe Map for {guild}"
 msgstr ""
@@ -57,6 +57,9 @@ msgstr "Langues rechargés"
 msgid "Location"
 msgstr ""
 
+msgid "Looking up {game} account for {user} on {platform}."
+msgstr ""
+
 msgid "Looking up {user} on {game} on {platform}..."
 msgstr "Je recherche {user} sur {game} sur {platform}..."
 
@@ -91,6 +94,18 @@ msgstr ""
 "Profil crée. Pour ajouter des comptes utilise {prefix}add <account>\n"
 "Comptes supportés: {accounts}"
 
+msgid "Request accepted"
+msgstr ""
+
+msgid "Request accepted. Adding to {name}"
+msgstr ""
+
+msgid "Request declined"
+msgstr ""
+
+msgid "Requesting permission from {name}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr "Mettre la langue pour {guild_name} sur {language}"
 
@@ -99,6 +114,11 @@ msgstr "Montre tes stats de {game}"
 
 msgid "Sorry that account isn't on your profile."
 msgstr "Désolé ce compte n'est pas sur votre profil."
+
+msgid ""
+"Sorry the account {account} is not supported yet.\n"
+"The supported accounts are {accounts}"
+msgstr ""
 
 msgid ""
 "Sorry the account {account} is not supported yet.\n"
@@ -127,10 +147,22 @@ msgstr "Cet utilisateur n'a pas ajouté de compte pour {game}"
 msgid "That was not a valid choice. You have {tries} more tries."
 msgstr "Ce choix n'est pas valide. Tu as encore {tries} essais."
 
+msgid "That wasn't a valid answer, please answer yes or no."
+msgstr ""
+
 msgid "That's not a valid platform, the options are: {platforms}"
 msgstr "Ce n'est pas une plateforme valide, les options sont : {platforms}"
 
+msgid "The account names don't match and may not work, try checking capitalisation. {user} vs. {account}"
+msgstr ""
+
+msgid "The available platforms are {platforms}"
+msgstr ""
+
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
+msgstr ""
+
+msgid "The user {user} does not have a {game} profile on {platform}."
 msgstr ""
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
@@ -165,9 +197,6 @@ msgstr "Tu n'as même pas de comptes sur ton profil, ajoute-en!"
 msgid "You have already registered {account}"
 msgstr "Tu as déjà enregistré {account}"
 
-msgid "You have not yet set up a profile, do {prefix}profile to get started."
-msgstr "Tu n'as pas encore préparer ton profil, fais {prefix}profile pour commencer."
-
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr "Tu dois ajouter un compte pour {game}, écris {prefix}add {game_key}"
 
@@ -189,18 +218,27 @@ msgstr ""
 msgid "{guild} unregistered from receiving live match updates."
 msgstr ""
 
+msgid "{language_key} added to list of available languages, which are: [{languages}]"
+msgstr "{language} a été ajouté à la liste des langues disponibles qui sont: [{languages}]"
+
 msgid "{language_key} removed from available languages, which are: [{languages}]"
 msgstr "{language_key} a été enlevé des langues disponibles qui sont: [{languages}]"
 
-msgid "{language} added to list of available languages, which are: [{languages}]"
-msgstr "{language} a été ajouté à la liste des langues disponibles qui sont: [{languages}]"
-
 msgid "{language} not in list of available languages: {languages}"
 msgstr "{language} n'est pas dans la liste des langues disponibles: {languages}"
+
+msgid "{name} declined"
+msgstr ""
 
 msgid "{user}'s Home Base"
 msgstr ""
 
 #~ msgid "Please enter your account name for {game}:"
 #~ msgstr "S'il te plaît, entre ton nom de compte pour {game}:"
+
+#~ msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
+#~ msgstr "**ERROR**: Le bot requiert l'abilité d'intégrer des liens, sois sûr qu'il a la permission: 'Intégrer des Liens'."
+
+#~ msgid "You have not yet set up a profile, do {prefix}profile to get started."
+#~ msgstr "Tu n'as pas encore préparer ton profil, fais {prefix}profile pour commencer."
 
