--- a/gamestats.pot
+++ b/gamestats.pot
@@ -1,23 +1,23 @@
 # Translations template for GameStats.
-# Copyright (C) 2017 GameStats
+# Copyright (C) 2018 GameStats
 # This file is distributed under the same license as the GameStats project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GameStats 0.2\n"
+"Project-Id-Version: GameStats 0.3\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2017-12-16 01:07+0000\n"
+"POT-Creation-Date: 2018-04-01 14:09+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Avaren#9383\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.1\n"
+"Generated-By: Babel 2.5.3\n"
 
-msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
+msgid "*Warning*: Different spelling of {user}"
 msgstr ""
 
 msgid "<:nms:346638509114785808>No Man's Sky Universe Map for {guild}"
@@ -56,6 +56,9 @@ msgstr ""
 msgid "Location"
 msgstr ""
 
+msgid "Looking up {game} account for {user} on {platform}."
+msgstr ""
+
 msgid "Looking up {user} on {game} on {platform}..."
 msgstr ""
 
@@ -88,6 +91,18 @@ msgid ""
 "Supported accounts: {accounts}"
 msgstr ""
 
+msgid "Request accepted"
+msgstr ""
+
+msgid "Request accepted. Adding to {name}"
+msgstr ""
+
+msgid "Request declined"
+msgstr ""
+
+msgid "Requesting permission from {name}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr ""
 
@@ -95,6 +110,11 @@ msgid "Shows your stats from {game}"
 msgstr ""
 
 msgid "Sorry that account isn't on your profile."
+msgstr ""
+
+msgid ""
+"Sorry the account {account} is not supported yet.\n"
+"The supported accounts are {accounts}"
 msgstr ""
 
 msgid ""
@@ -118,10 +138,22 @@ msgstr ""
 msgid "That was not a valid choice. You have {tries} more tries."
 msgstr ""
 
+msgid "That wasn't a valid answer, please answer yes or no."
+msgstr ""
+
 msgid "That's not a valid platform, the options are: {platforms}"
 msgstr ""
 
+msgid "The account names don't match and may not work, try checking capitalisation. {user} vs. {account}"
+msgstr ""
+
+msgid "The available platforms are {platforms}"
+msgstr ""
+
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
+msgstr ""
+
+msgid "The user {user} does not have a {game} profile on {platform}."
 msgstr ""
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
@@ -156,9 +188,6 @@ msgstr ""
 msgid "You have already registered {account}"
 msgstr ""
 
-msgid "You have not yet set up a profile, do {prefix}profile to get started."
-msgstr ""
-
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr ""
 
@@ -180,13 +209,16 @@ msgstr ""
 msgid "{guild} unregistered from receiving live match updates."
 msgstr ""
 
+msgid "{language_key} added to list of available languages, which are: [{languages}]"
+msgstr ""
+
 msgid "{language_key} removed from available languages, which are: [{languages}]"
 msgstr ""
 
-msgid "{language} added to list of available languages, which are: [{languages}]"
+msgid "{language} not in list of available languages: {languages}"
 msgstr ""
 
-msgid "{language} not in list of available languages: {languages}"
+msgid "{name} declined"
 msgstr ""
 
 msgid "{user}'s Home Base"
