--- a/es/LC_MESSAGES/gamestats.po
+++ b/es/LC_MESSAGES/gamestats.po
@@ -1,13 +1,13 @@
 # Spanish translations for GameStats.
-# Copyright (C) 2017 GameStats
+# Copyright (C) 2018 GameStats
 # This file is distributed under the same license as the GameStats project.
-# FIRST AUTHOR <Desgrate>, 2017.
+# Desgrate#9087, 2018.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.2\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2017-12-16 01:07+0000\n"
+"POT-Creation-Date: 2018-04-01 14:09+0100\n"
 "PO-Revision-Date: 2018-01-17 21:15+0000\n"
 "Last-Translator: Desgrate#9087\n"
 "Language: es\n"
@@ -16,10 +16,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.1\n"
+"Generated-By: Babel 2.5.3\n"
 
-msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
-msgstr "**ERROR**: El bot requiere la abilidad de poder insertar, tengan en cuenta que el bot tenga el permiso de 'insertar enlances' activado."
+msgid "*Warning*: Different spelling of {user}"
+msgstr ""
 
 msgid "<:nms:346638509114785808>No Man's Sky Universe Map for {guild}"
 msgstr "<:nms: 346638509114784808>No Man's Sky Mapa Del Universo para {gremio}"
@@ -38,8 +38,7 @@ msgid ""
 "\n"
 "{groups}"
 msgstr ""
-"Dale click a los iconos de abajo para unirte/salirte del grupo:n"
-"\n"
+"Dale click a los iconos de abajo para unirte/salirte del grupo:n\n"
 "{groups}"
 
 msgid "Distance between {user1} and {user2}: {dist}ly"
@@ -59,6 +58,9 @@ msgstr "Lenguajes recargados"
 
 msgid "Location"
 msgstr "Localizacion"
+
+msgid "Looking up {game} account for {user} on {platform}."
+msgstr ""
 
 msgid "Looking up {user} on {game} on {platform}..."
 msgstr "Buscando a {user} en {game} en {platform}..."
@@ -94,6 +96,18 @@ msgstr ""
 "Perfil creado. Para agregar cuentas usar {prefix}add <account>\n"
 "Cuentas soportadas: {accounts}"
 
+msgid "Request accepted"
+msgstr ""
+
+msgid "Request accepted. Adding to {name}"
+msgstr ""
+
+msgid "Request declined"
+msgstr ""
+
+msgid "Requesting permission from {name}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr "Establecer lenguaje para {guild_name} a {language}"
 
@@ -102,6 +116,11 @@ msgstr "Muestra tus estadisticas de {game}"
 
 msgid "Sorry that account isn't on your profile."
 msgstr "Perdone pero esa cuenta no esta en su perfil."
+
+msgid ""
+"Sorry the account {account} is not supported yet.\n"
+"The supported accounts are {accounts}"
+msgstr ""
 
 msgid ""
 "Sorry the account {account} is not supported yet.\n"
@@ -129,11 +148,23 @@ msgstr "Ese usuario no ha añadido un cuenta para {game} aun"
 msgid "That was not a valid choice. You have {tries} more tries."
 msgstr "Esa no fue una buena eleccion. Tienes {tries} intentos mas."
 
+msgid "That wasn't a valid answer, please answer yes or no."
+msgstr ""
+
 msgid "That's not a valid platform, the options are: {platforms}"
 msgstr "Esa no es una plataforma valida, las opciones son: {platforms}"
 
+msgid "The account names don't match and may not work, try checking capitalisation. {user} vs. {account}"
+msgstr ""
+
+msgid "The available platforms are {platforms}"
+msgstr ""
+
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
 msgstr "El codigo de la localizacion debe ser en el formato HUKYA:XXXX:XXXX:XXXX:XXXX Porfavor revisa tu codigo y intenta otra vez."
+
+msgid "The user {user} does not have a {game} profile on {platform}."
+msgstr ""
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
 msgstr "Hay multiples juegos en curso. Porfavor clarifica al responder con el numero de eleccion correcta"
@@ -150,8 +181,7 @@ msgstr "Cuidado: Tienes multiples cuentas de {game} deberias borrar una con {pre
 msgid ""
 "What is the location of your NMS home base?\n"
 "To find its location, place a Signal Booster and note down the code it shows when you get close, in the format HUKYA:XXXX:XXXX:XXXX:XXXX"
-msgstr ""
-"Cual es la localizacion de tu NMS base?\n"
+msgstr "Cual es la localizacion de tu NMS base?\n"
 
 msgid "What platform do you play {game} on? [{platforms}]"
 msgstr "En que plataforma juegas {game} en? [{platforms}] "
@@ -167,9 +197,6 @@ msgstr "No tienes cuentas en tu perfil, añade cuentas!!"
 
 msgid "You have already registered {account}"
 msgstr "Ya registraste una cuenta {account}"
-
-msgid "You have not yet set up a profile, do {prefix}profile to get started."
-msgstr "No has activado tu perfil aun, has {prefix}perfil para iniciar."
 
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr "Necesitas añadir una cuenta para {game}, haz {prefix}añade {game_key}"
@@ -192,15 +219,24 @@ msgstr "{game} juegos en linea para {guild}"
 msgid "{guild} unregistered from receiving live match updates."
 msgstr "{guild} no registrada para recibir actualizaciones de partidos en tiempo real."
 
+msgid "{language_key} added to list of available languages, which are: [{languages}]"
+msgstr ""
+
 msgid "{language_key} removed from available languages, which are: [{languages}]"
 msgstr "{language_key} removida de lenguajes disponibles, que son: [{languages}]"
-
-msgid "{language} added to list of available languages, which are: [{languages}]"
-msgstr ""
 
 msgid "{language} not in list of available languages: {languages}"
 msgstr "{language} no en la lista de lenguajes disponibles: {languages}"
 
+msgid "{name} declined"
+msgstr ""
+
 msgid "{user}'s Home Base"
 msgstr "{user}'s base casa"
+
+#~ msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
+#~ msgstr "**ERROR**: El bot requiere la abilidad de poder insertar, tengan en cuenta que el bot tenga el permiso de 'insertar enlances' activado."
+
+#~ msgid "You have not yet set up a profile, do {prefix}profile to get started."
+#~ msgstr "No has activado tu perfil aun, has {prefix}perfil para iniciar."
 
