--- a/zh/LC_MESSAGES/gamestats.po
+++ b/zh/LC_MESSAGES/gamestats.po
@@ -1,25 +1,25 @@
 # Chinese translations for GameStats.
-# Copyright (C) 2017 GameStats
+# Copyright (C) 2018 GameStats
 # This file is distributed under the same license as the GameStats project.
-# https://github.com/Avaren, 2017.
+# Viola#5458, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.1\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2017-12-16 01:07+0000\n"
+"POT-Creation-Date: 2018-04-01 14:09+0100\n"
 "PO-Revision-Date: 2017-08-12 12:56+0100\n"
-"Last-Translator: Viola#5458\n"
+"Last-Translator: !滥好人#8888\n"
 "Language: zh\n"
 "Language-Team: zh <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.1\n"
+"Generated-By: Babel 2.5.3\n"
 
-msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
-msgstr "**错误**：确保它具有“内嵌链接”权限。"
+msgid "*Warning*: Different spelling of {user}"
+msgstr ""
 
 msgid "<:nms:346638509114785808>No Man's Sky Universe Map for {guild}"
 msgstr "{guild}的《无人深空》宇宙地图<:nms:346638509114785808>"
@@ -60,6 +60,9 @@ msgstr "语言清单已更新"
 msgid "Location"
 msgstr "位置"
 
+msgid "Looking up {game} account for {user} on {platform}."
+msgstr ""
+
 msgid "Looking up {user} on {game} on {platform}..."
 msgstr "在{platform}上查找{user}的{game}。。。"
 
@@ -94,6 +97,18 @@ msgstr ""
 "创建个人资料。若要添加帐户，请使用{prefix}添加<account>\n"
 "支持的帐户：{accounts}"
 
+msgid "Request accepted"
+msgstr ""
+
+msgid "Request accepted. Adding to {name}"
+msgstr ""
+
+msgid "Request declined"
+msgstr ""
+
+msgid "Requesting permission from {name}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr "设定{guild_name}的语言到{language}"
 
@@ -102,6 +117,11 @@ msgstr "显示{game}的统计信息"
 
 msgid "Sorry that account isn't on your profile."
 msgstr "很抱歉,你的个人资料上没有那个账户。"
+
+msgid ""
+"Sorry the account {account} is not supported yet.\n"
+"The supported accounts are {accounts}"
+msgstr ""
 
 msgid ""
 "Sorry the account {account} is not supported yet.\n"
@@ -130,11 +150,23 @@ msgstr "这个帐户没有加入{game}"
 msgid "That was not a valid choice. You have {tries} more tries."
 msgstr "那不是一个有效的选择。你有{tries}更多的尝试。"
 
+msgid "That wasn't a valid answer, please answer yes or no."
+msgstr ""
+
 msgid "That's not a valid platform, the options are: {platforms}"
 msgstr "这不是个有效的平台,你的选择有{platforms}"
 
+msgid "The account names don't match and may not work, try checking capitalisation. {user} vs. {account}"
+msgstr ""
+
+msgid "The available platforms are {platforms}"
+msgstr ""
+
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
 msgstr "位置代码的格式必须是HUKYA：XXXX：XXXX：XXXX：XXXX：XXXX 请检查你的代码，然后再试一次。"
+
+msgid "The user {user} does not have a {game} profile on {platform}."
+msgstr ""
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
 msgstr "有多个匹配结果，请用正确选项的数量。"
@@ -170,9 +202,6 @@ msgstr "你的个人资料里没有账号，请添加一些！"
 msgid "You have already registered {account}"
 msgstr "你已经注册了{account}"
 
-msgid "You have not yet set up a profile, do {prefix}profile to get started."
-msgstr "你还没有设置一个配置文件，使用{prefix}配置文件来开始。"
-
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr "你需要一个{game}帐号,请输入{prefix}和{game_key}"
 
@@ -194,18 +223,27 @@ msgstr "{guild}的游戏实况{game}"
 msgid "{guild} unregistered from receiving live match updates."
 msgstr "{guild}未注册，无法接收实时比赛更新。"
 
+msgid "{language_key} added to list of available languages, which are: [{languages}]"
+msgstr "已加入{language}到可用的语言清单,清单：[{languages}]"
+
 msgid "{language_key} removed from available languages, which are: [{languages}]"
 msgstr "{language_key}已从可用语言中删除，这些语言是：[{languages}]"
 
-msgid "{language} added to list of available languages, which are: [{languages}]"
-msgstr "已加入{language}到可用的语言清单,清单：[{languages}]"
-
 msgid "{language} not in list of available languages: {languages}"
 msgstr "{language}不是可用的语言: {languages}"
+
+msgid "{name} declined"
+msgstr ""
 
 msgid "{user}'s Home Base"
 msgstr "{user}的主页"
 
 #~ msgid "Please enter your account name for {game}:"
 #~ msgstr "请输入你{game}的帐户名称："
+
+#~ msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
+#~ msgstr "**错误**：确保它具有“内嵌链接”权限。"
+
+#~ msgid "You have not yet set up a profile, do {prefix}profile to get started."
+#~ msgstr "你还没有设置一个配置文件，使用{prefix}配置文件来开始。"
 
